--- a/styles/styles.css
+++ b/styles/styles.css
@@ -71,7 +71,11 @@ h2{
 	padding-right: 93px;
 	padding-left: 191px;
     margin: 0;
-	color:var(--logo-link-txt-cl) !important; 
+}
+
+.webstudio{
+	color:var(--logo-link-txt-cl);
+	list-style: none;
 }
 
 .menu{
@@ -226,8 +230,8 @@ h2{
 .team-list{
 	max-width: 1170px;
 	list-style:none;
-	grid-template-columns: repeat(4,1fr);
-	display: grid;
+	justify-content: space-between;
+	display: flex;
 	padding-left: 0;
 	grid-gap: 37px; 
 	margin: 0;
